# ccsnes

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-wasm.sh  build.sh  index.html  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: API.md  QUICKSTART.md
src/: config.rs  dma.rs  emulator.rs  error.rs  lib.rs  main.rs  savestate.rs  wasm.rs
src/apu/: dsp.rs  mod.rs  spc700.rs  spc700_instructions.rs
src/cartridge/: header.rs  loader.rs  mod.rs
src/cpu/: addressing.rs  core.rs  decode_table.rs  execute.rs  instructions.rs  mod.rs  registers.rs
src/debug/: breakpoints.rs  mod.rs  profiler.rs  trace.rs
src/frontend/: mod.rs
src/frontend/native/: audio.rs  mod.rs  video.rs
src/input/: controller.rs  mod.rs
src/memory/: bus.rs  cache.rs  dma.rs  mappers.rs  mod.rs
src/memory/mappers/: hirom.rs  lorom.rs  mod.rs
src/ppu/: backgrounds.rs  core.rs  memory.rs  mod.rs  mode7.rs  registers.rs  render_cache.rs  renderer.rs  scrolling.rs  sprites.rs
src/wasm/: mod.rs
tests/: apu_tests.rs  cartridge_tests.rs  cpu_tests.rs  create_simple_test.py  dma_tests.rs  download_test_roms.sh  hello_world.s  mod.rs  mode7_tests.rs  ppu_tests.rs  run_test_suite.sh  savestate_tests.rs
tests/test_results/: summary.txt
tests/test_roms/: simple_test.sfc
web/: app.js  index.html  main.js  styles.css
