[package]
name = "ccsnes"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Super Nintendo Entertainment System (SNES) emulator written in Rust with WebAssembly support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ccsnes"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# 共通dependencies
byteorder = "1.5"
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"

# ネイティブ専用dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.29"
wgpu = "0.19"
cpal = "0.15"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
pollster = "0.3"

# WebAssembly専用dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
wee_alloc = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "AudioContext",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "GainNode",
  "KeyboardEvent",
  "GamepadEvent",
  "Window",
  "Performance",
]

[dev-dependencies]
criterion = "0.5"

[features]
default = []
wee_alloc = ["dep:wee_alloc"]

[package.metadata.wasm-pack.profile.release]
wee-alloc = ["wee_alloc"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

[[bin]]
name = "ccsnes"
path = "src/main.rs"
required-features = []

