[package]
name = "ccsnes"
version = "0.1.0"
edition = "2021"
authors = ["mp3 <mp3@users.noreply.github.com>"]
description = "Super Nintendo Entertainment System (SNES) emulator written in Rust with WebAssembly support"
license = "MIT"
repository = "https://github.com/mp3/ccsnes"
homepage = "https://github.com/mp3/ccsnes"
documentation = "https://github.com/mp3/ccsnes/tree/main/docs"
readme = "README.md"
keywords = ["snes", "emulator", "super-nintendo", "wasm", "gamedev"]
categories = ["emulators", "game-engines", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ccsnes"
path = "src/bin/ccsnes.rs"
required-features = []

[dependencies]
# 共通dependencies
byteorder = "1.5"
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
once_cell = "1.19"
toml = "0.8"
dirs = "5.0"

# ネイティブ専用dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.29"
wgpu = "0.19"
cpal = "0.15"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }

# WebAssembly専用dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
wee_alloc = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "AudioContext",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "GainNode",
  "KeyboardEvent",
  "GamepadEvent",
  "Window",
  "Performance",
]

[dev-dependencies]
criterion = "0.5"

[features]
default = []
wasm = []
wee_alloc = ["dep:wee_alloc"]

[package.metadata.wasm-pack.profile.release]
wee-alloc = ["wee_alloc"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3


